# Monocular-Depth-Estimation

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  launch.sh  requirements.txt
docker/: entrypoint.sh
ros_ws/src/camera_pkg/: CMakeLists.txt  package.xml
ros_ws/src/camera_pkg/include/: visibility_control.h
ros_ws/src/camera_pkg/include/camera_pkg/: camera_component.hpp  display_component.hpp
ros_ws/src/camera_pkg/launch/: camera_depth_launch.py  camera_launch.py
ros_ws/src/camera_pkg/src/: camera_component.cpp  display_component.cpp
ros_ws/src/camera_pkg/test_camera_component/: test_camera_component.cpp
ros_ws/src/depth_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/depth_pkg/depth_pkg/: midas_node.py  transform_pipeline.py
ros_ws/src/depth_pkg/launch/: 2_depth_launch_2.py  depth_launch.py
