<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="v.retamalguiberteau@student.vu.nl">victor</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
  <build_type>ament_cmake</build_type>
  <!-- <rclcpp_components>
    <class type="camera_composition::CameraComponent" base_class_type="rclcpp::Node">
      camera_composition/CameraComponent
    </class>
    <class type="camera_composition::DisplayComponent" base_class_type="rclcpp::Node">
      camera_composition/DisplayComponent
    </class>
  </rclcpp_components> -->
</export>
</package>
